added Rmarkdown the definitive guide

--- a/uni.bib
+++ b/uni.bib
@@ -6,3 +6,12 @@
 	       ISBN = {978-1 874454 50 2},
 }
 
+@book{Xie_2018,
+	doi = {10.1201/9781138359444},
+	url = {https://doi.org/10.1201%2F9781138359444},
+	year = 2018,
+	month = {jul},
+	publisher = {Chapman and Hall/{CRC}},
+	author = {Yihui Xie and J. J. Allaire and Garrett Grolemund},
+	title = {R Markdown}
+}
