--- a/uni.bib
+++ b/uni.bib
@@ -9,9 +9,18 @@
 @book{Xie_2018,
 	doi = {10.1201/9781138359444},
 	url = {https://doi.org/10.1201%2F9781138359444},
-	year = 2018,
+	year = {2018},
 	month = {jul},
 	publisher = {Chapman and Hall/{CRC}},
 	author = {Yihui Xie and J. J. Allaire and Garrett Grolemund},
 	title = {R Markdown}
 }
+
+@book{Xie_2019,
+	author = {Yihui Xie},
+	year = {2019},
+	title = {bookdown: Authoring Books and Technical Documents with R Markdown},
+	publisher = {Chapman & Hall/{CRC}},
+	ISBN = {978-1138700109}
+}
+
