added intro to regex to books.bib

--- a/books.bib
+++ b/books.bib
@@ -24,3 +24,11 @@
 	ISBN = {978-1138700109}
 }
 
+@book{Fitzgerald2012,
+	author = {Michael Fitzgerald},
+	year = {2012},
+	title = {Introducing Regular Expressions},
+	publisher = {O'Reilly Media, Inc.},
+	ISBN = {978-1-449-39268-0}
+}
+
