--- a/mega.bib
+++ b/mega.bib
@@ -1,1 +1,34 @@
+@book{Mould03,
+	author = {Quita Mould, Ian Carlisle, and Esther Cameron},
+	       year = {2003},
+	       title = {Leather and Leatherworking in Anglo-Scandinavian and Medieval York},
+	       publisher = {Council for British Archaeology},
+	       ISBN = {978-1 874454 50 2},
+}
+
+@book{Xie_2018,
+	doi = {10.1201/9781138359444},
+	url = {https://doi.org/10.1201%2F9781138359444},
+	year = {2018},
+	month = {jul},
+	publisher = {Chapman and Hall/{CRC}},
+	author = {Yihui Xie and J. J. Allaire and Garrett Grolemund},
+	title = {R Markdown}
+}
+
+@book{Xie_2019,
+	author = {Yihui Xie},
+	year = {2019},
+	title = {bookdown: Authoring Books and Technical Documents with R Markdown},
+	publisher = {Chapman & Hall/{CRC}},
+	ISBN = {978-1138700109}
+}
+
+@book{Fitzgerald2012,
+	author = {Michael Fitzgerald},
+	year = {2012},
+	title = {Introducing Regular Expressions},
+	publisher = {O'Reilly Media, Inc.},
+	ISBN = {978-1-449-39268-0}
+}
 
