R packages by Wickham

--- a/books.bib
+++ b/books.bib
@@ -32,3 +32,11 @@
 	ISBN = {978-1-449-39268-0}
 }
 
+@book{Wickham2015,
+	author = {Hadley Wickham},
+	year = {2015},
+	title = {R Packages},
+	publisher = {O'Reilly Media, Inc.},
+	ISBN = {978-1-491-91059-7}
+}
+
