--- a/mega.bib
+++ b/mega.bib
@@ -32,3 +32,24 @@
 	ISBN = {978-1-449-39268-0}
 }
 
+@book{Wickham2015,
+	author = {Hadley Wickham},
+	year = {2015},
+	title = {R Packages},
+	publisher = {O'Reilly Media, Inc.},
+	ISBN = {978-1-491-91059-7}
+}
+
+@article{Donoho_2017,
+	doi = {10.1080/10618600.2017.1384734},
+	url = {https://doi.org/10.1080%2F10618600.2017.1384734},
+	year = 2017,
+	month = {oct},
+	publisher = {Informa {UK} Limited},
+	volume = {26},
+	number = {4},
+	pages = {745--766},
+	author = {David Donoho},
+	title = {50 Years of Data Science},
+	journal = {Journal of Computational and Graphical Statistics}
+}
