add R4DS and update bibs

--- a/books.bib
+++ b/books.bib
@@ -1,30 +1,29 @@
-@book{Mould03,
-	author = {Quita Mould, Ian Carlisle, and Esther Cameron},
-	       year = {2003},
-	       title = {Leather and Leatherworking in Anglo-Scandinavian and Medieval York},
-	       publisher = {Council for British Archaeology},
-	       ISBN = {978-1 874454 50 2},
+@book{mould2003,
+	author = {Quita Mould, Ian Carlisle, \& Esther Cameron},
+	year = {2003},
+	title = {Leather and Leatherworking in Anglo-Scandinavian and Medieval York},
+	publisher = {Council for British Archaeology},
+	ISBN = {978-1 874454 50 2},
 }
 
-@book{Xie_2018,
+@book{xie2018,
 	doi = {10.1201/9781138359444},
-	url = {https://doi.org/10.1201%2F9781138359444},
+	url = {https://doi.org/10.1201\%2F9781138359444},
 	year = {2018},
-	month = {jul},
 	publisher = {Chapman and Hall/{CRC}},
-	author = {Yihui Xie and J. J. Allaire and Garrett Grolemund},
+	author = {Yihui Xie,  \& J. J. Allaire, \& Garrett Grolemund},
 	title = {R Markdown}
 }
 
-@book{Xie_2019,
+@book{xie2019,
 	author = {Yihui Xie},
 	year = {2019},
 	title = {bookdown: Authoring Books and Technical Documents with R Markdown},
-	publisher = {Chapman & Hall/{CRC}},
+	publisher = {Chapman \& Hall/{CRC}},
 	ISBN = {978-1138700109}
 }
 
-@book{Fitzgerald2012,
+@book{fitzgerald2012,
 	author = {Michael Fitzgerald},
 	year = {2012},
 	title = {Introducing Regular Expressions},
@@ -32,11 +31,17 @@
 	ISBN = {978-1-449-39268-0}
 }
 
-@book{Wickham2015,
+@book{wickham2015,
 	author = {Hadley Wickham},
 	year = {2015},
 	title = {R Packages},
 	publisher = {O'Reilly Media, Inc.},
 	ISBN = {978-1-491-91059-7}
 }
-
+@book{wickham2017,
+	author = {Hadley Wickham},
+	year = {2017},
+	title = {R for Data Science},
+	publisher = {O'Reilly Media, Inc.},
+	ISBN = {978-1491910399}
+}
