Data sci. at the CLI

--- a/books.bib
+++ b/books.bib
@@ -45,3 +45,10 @@
 	publisher = {O'Reilly Media, Inc.},
 	ISBN = {978-1491910399}
 }
+@book{janaawna2015,
+	author = {Jeroen Janssens},
+	year = {2015},
+	title = {Data Science at the Command Line},
+	publisher = {O'Reilly Media, Inc.},
+	ISBN = {978-1-491-94785-2}
+}
