efficient R programming book

--- a/books.bib
+++ b/books.bib
@@ -52,3 +52,10 @@
 	publisher = {O'Reilly Media, Inc.},
 	ISBN = {978-1-491-94785-2}
 }
+@book{gillespie2017,
+	author = {Colin Gillespie \& Robin Lovelace},
+	year = {2017},
+	title = {Effecient R Programming},
+	publisher = {O'Reilly Media, Inc.},
+	ISBN = {978-1-491-95078-4}
+}
