Viking spirit and roman honor books added

--- a/books.bib
+++ b/books.bib
@@ -62,3 +62,17 @@
 	publisher = {O'Reilly Media, Inc.},
 	ISBN = {978-1-491-95078-4}
 }
+@book{mccoy2016,
+    author = {Daniel McCoy},
+    year = {2016},
+    title = {The Viking Spirit},
+    ISBN = {978-1533393036}
+}
+@book{barton2001,
+    author = {Carlin A. Barton},
+    year = {2001},
+    title = {Roman Honor: The fire in the bones},
+    publisher = {University of California Press},
+    ISBN = {978-0-520-22525-1}
+}
+
