--- a/mega.bib
+++ b/mega.bib
@@ -11,13 +11,7 @@
 	title = {50 Years of Data Science},
 	journal = {Journal of Computational and Graphical Statistics}
 }
-@book{mould2003,
-	author = {Quita Mould, Ian Carlisle, \& Esther Cameron},
-	year = {2003},
-	title = {Leather and Leatherworking in Anglo-Scandinavian and Medieval York},
-	publisher = {Council for British Archaeology},
-	ISBN = {978-1 874454 50 2},
-}
+@book{mould2003, author = {Quita Mould, Ian Carlisle, \& Esther Cameron}, year = {2003}, title = {Leather and Leatherworking in Anglo-Scandinavian and Medieval York}, publisher = {Council for British Archaeology}, ISBN = {978-1 874454 50 2}, }
 
 @book{xie2018,
 	doi = {10.1201/9781138359444},
@@ -75,3 +69,12 @@
 	publisher = {O'Reilly Media, Inc.},
 	ISBN = {978-1-491-95078-4}
 }
+
+@book{epstein2019,
+    author = {David Epstein},
+    year = {2019},
+    title = {Range},
+    publisher = {Riverhead Books},
+    ISBN = {978-0-7352-1448-4}
+}
+
