get better doi's in references

--- a/books.bib
+++ b/books.bib
@@ -5,24 +5,6 @@
 	publisher = {Council for British Archaeology},
 	ISBN = {978-1 874454 50 2},
 }
-
-@book{xie2018,
-	doi = {10.1201/9781138359444},
-	url = {https://doi.org/10.1201\%2F9781138359444},
-	year = {2018},
-	publisher = {Chapman and Hall/{CRC}},
-	author = {Yihui Xie,  \& J. J. Allaire, \& Garrett Grolemund},
-	title = {R Markdown}
-}
-
-@book{xie2019,
-	author = {Yihui Xie},
-	year = {2019},
-	title = {bookdown: Authoring Books and Technical Documents with R Markdown},
-	publisher = {Chapman \& Hall/{CRC}},
-	ISBN = {978-1138700109}
-}
-
 @book{fitzgerald2012,
 	author = {Michael Fitzgerald},
 	year = {2012},
@@ -76,3 +58,21 @@
     ISBN = {978-0-520-22525-1}
 }
 
+@book{Xie_2018,
+	doi = {10.1201/9781138359444},
+	url = {https://doi.org/10.1201%2F9781138359444},
+	year = {2018},
+	month = {jul},
+	publisher = {Chapman and Hall/{CRC}},
+	author = {Yihui Xie and J. J. Allaire and Garrett Grolemund},
+	title = {R Markdown}
+}
+@book{Xie_2016,
+	doi = {10.1201/9781315204963},
+	url = {https://doi.org/10.1201%2F9781315204963},
+	year = {2016},
+	month = {dec},
+	publisher = {Chapman and Hall/{CRC}},
+	author = {Yihui Xie},
+	title = {bookdown}
+}
