--- a/mega.bib
+++ b/mega.bib
@@ -1,13 +1,35 @@
-@article{donoho2017,
+@article{Portenoy_2017,
+	doi = {10.3389/frma.2017.00008},
+	url = {https://doi.org/10.3389%2Ffrma.2017.00008},
+	year = {2017},
+	month = {nov},
+	publisher = {Frontiers Media {SA}},
+	volume = {2},
+	author = {Jason Portenoy and Jessica Hullman and Jevin D. West},
+	title = {Leveraging Citation Networks to Visualize Scholarly Influence Over Time},
+	journal = {Frontiers in Research Metrics and Analytics}
+}
+@article{Wickham_2014,
+	doi = {10.18637/jss.v059.i10},
+	url = {https://doi.org/10.18637%2Fjss.v059.i10},
+	year = {2014},
+	publisher = {Foundation for Open Access Statistic},
+	volume = {59},
+	number = {10},
+	author = {Hadley Wickham},
+	title = {Tidy Data},
+	journal = {Journal of Statistical Software}
+}
+@article{Donoho_2017,
 	doi = {10.1080/10618600.2017.1384734},
-	url = {https://doi.org/10.1080\%2F10618600.2017.1384734},
+	url = {https://doi.org/10.1080%2F10618600.2017.1384734},
 	year = {2017},
 	month = {oct},
 	publisher = {Informa {UK} Limited},
 	volume = {26},
 	number = {4},
 	pages = {745--766},
-	author = {Donoho, David},
+	author = {David Donoho},
 	title = {50 Years of Data Science},
 	journal = {Journal of Computational and Graphical Statistics}
 }
@@ -18,24 +40,6 @@
 	publisher = {Council for British Archaeology},
 	ISBN = {978-1 874454 50 2},
 }
-
-@book{xie2018,
-	doi = {10.1201/9781138359444},
-	url = {https://doi.org/10.1201\%2F9781138359444},
-	year = {2018},
-	publisher = {Chapman and Hall/{CRC}},
-	author = {Yihui Xie,  \& J. J. Allaire, \& Garrett Grolemund},
-	title = {R Markdown}
-}
-
-@book{xie2019,
-	author = {Yihui Xie},
-	year = {2019},
-	title = {bookdown: Authoring Books and Technical Documents with R Markdown},
-	publisher = {Chapman \& Hall/{CRC}},
-	ISBN = {978-1138700109}
-}
-
 @book{fitzgerald2012,
 	author = {Michael Fitzgerald},
 	year = {2012},
@@ -89,3 +93,21 @@
     ISBN = {978-0-520-22525-1}
 }
 
+@book{Xie_2018,
+	doi = {10.1201/9781138359444},
+	url = {https://doi.org/10.1201%2F9781138359444},
+	year = {2018},
+	month = {jul},
+	publisher = {Chapman and Hall/{CRC}},
+	author = {Yihui Xie and J. J. Allaire and Garrett Grolemund},
+	title = {R Markdown}
+}
+@book{Xie_2016,
+	doi = {10.1201/9781315204963},
+	url = {https://doi.org/10.1201%2F9781315204963},
+	year = {2016},
+	month = {dec},
+	publisher = {Chapman and Hall/{CRC}},
+	author = {Yihui Xie},
+	title = {bookdown}
+}
