--- a/mega.bib
+++ b/mega.bib
@@ -33,6 +33,19 @@
 	title = {50 Years of Data Science},
 	journal = {Journal of Computational and Graphical Statistics}
 }
+@article{Chambers_2020,
+	doi = {10.1145/3386334},
+	url = {https://doi.org/10.1145%2F3386334},
+	year = 2020,
+	month = {jun},
+	publisher = {Association for Computing Machinery ({ACM})},
+	volume = {4},
+	number = {{HOPL}},
+	pages = {1--17},
+	author = {John M. Chambers},
+	title = {S, R, and data science},
+	journal = {Proceedings of the {ACM} on Programming Languages}
+}
 @book{mould2003,
 	author = {Quita Mould, Ian Carlisle, \& Esther Cameron},
 	year = {2003},
